# workload-governor

./: .dockerignore  .env.example  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-publish.yml
docs/: admin-guide.md  api-reference.md  architecture.md  error-reference.md  maintainer-guide.md  transaction-lifecycle.md
frontend/app/: layout.tsx
frontend/components/: NetworkBanner.tsx
frontend/src/: app.css
frontend/src/components/: CapacityBars.tsx  EmptyState.tsx  IssueCard.tsx
infra/: BRANCH-ROTATION.md  logs_and_alarms.tf  uptime.tf
src/: EventHistoryTable.js  errors.rs  events.rs  lib.rs  storage.rs  test.rs
tests/unit/: WalletAddress.test.tsx
