[package]
name = "workload-governor"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { version = "22.0.0", features = [] }

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
proptest = { version = "1", default-features = false, features = ["std"] }

# ---------------------------------------------------------------------------
# Release profile — REQUIRED for Soroban WASM contracts.
# Without lto + codegen-units=1 + panic=abort, the binary exceeds the 64KB
# contract size limit enforced by the Stellar network.
# Reference: https://developers.stellar.org/docs/build/smart-contracts/getting-started/hello-world
# ---------------------------------------------------------------------------
[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Handy for local debugging — keeps logs enabled but inherits all other settings.
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
